# KIV-PSI-task02

./: CMakeLists.txt  Dockerfile  README.md
data/: EndScreen.html  SoundsEffects.txt  game.html  index.html
data/css/: End.css  cursor.css  game_chat_window.css  game_layout.css  game_rain.css  game_style.css  game_typing.css  intro_form.css  intro_style.css
data/scripts/: End.js  game_chat_window.js  game_countdown.js  game_cursor.js  game_rain.js  intro_functionality.js
data/story/: data.json
include/: config.h  httpserver.h  logger.h  utils.h
src/: httpserver.cpp  logger.cpp  main.cpp  utils.cpp
